--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,13 @@
   width: auto;
   height: auto;
   box-sizing: border-box;
-  background-color: rgb(71, 62, 62);
+  background-color: silver;
 
 
 }
 
 .top-bar {
-  background-color: lightslategray;
+  background-color: slategray;
   width: 100%;
   height: 65%;
   
@@ -41,7 +41,7 @@
   height: 450px;
   margin: 10px;
   padding: 15px;
-  border: 10px crimson solid;
+  border: 20px #505050 solid;
 
 
 }
@@ -51,7 +51,7 @@
   height: 450px;
   margin: 10px;
   padding: 15px;
-  border: 10px crimson solid;
+  border: 20px #505050 solid;
   background-color: lightskyblue;
   
 }
@@ -75,9 +75,18 @@
 
 }
 /*Contents photo area */
-article img.content-photos {
-  width: 350px;
-  width: 200px; 
+article div img .content-photos {
+  width: 300px;
+  width: 150px; 
+}
+/* H2 sub-contents */
+.same-color {
+  width: 100%;
+  height: 50px;
+  margin: 0 0 10px 0;
+  background-color: lightslategray;
+  text-align: justify;
+
 }
 
 /* Footer section */
